<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/background_blue"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/add_order" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_large"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_middle"

            >

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:textColor="@color/white"
                android:drawableTint="@color/white"
                android:padding="@dimen/margin_middle_standard"
                android:backgroundTint="@color/dark_blue"
                android:text="@string/select_product" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFirstPay"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_middle"
            android:layout_weight="1"
            app:counterMaxLength="5"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFirstPay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/first_pay"
                android:inputType="number"
                android:maxLines="1"
                android:padding="@dimen/margin_middle_standard"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMonth"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_middle"
            android:layout_weight="1"
            app:counterMaxLength="5"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMonth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/month_text"
                android:inputType="number"
                android:maxLines="1"
                android:padding="@dimen/margin_middle_standard"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSurcharge"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_middle"
            android:layout_weight="1"
            app:counterMaxLength="5"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSurcharge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/surcharge"
                android:inputType="number"
                android:maxLines="1"
                android:padding="@dimen/margin_middle_standard"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPrice"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_middle"
            android:layout_weight="1"
            app:counterMaxLength="5"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPrice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/price"
                android:inputType="number"
                android:maxLines="1"
                android:padding="@dimen/margin_middle_standard"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilProductCode"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_middle"
            android:layout_weight="1"
            app:counterMaxLength="5"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etProductCode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/product_code"
                android:inputType="number"
                android:maxLines="1"
                android:padding="@dimen/margin_middle_standard"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddOrder"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_marginBottom="@dimen/margin_standard"
            android:backgroundTint="@color/black"
            android:text="@string/add_order"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:cornerRadius="@dimen/margin_middle" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>