<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo"
        android:padding="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_height"
        style="@style/TextInputLayoutStyle"
        android:layout_marginHorizontal="@dimen/margin_large"
        app:endIconMode="clear_text"
        android:hint="@string/login"
        android:layout_marginVertical="@dimen/margin_extra_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:importantForAutofill="noExcludeDescendants"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:importantForAutofill="noExcludeDescendants"
            android:paddingVertical="@dimen/margin_middle"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/standard_height"
        android:hint="@string/password"
        android:layout_marginHorizontal="@dimen/margin_large"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/key"
        android:autofillHints="password"
        android:importantForAutofill="noExcludeDescendants"
        android:layout_marginVertical="@dimen/margin_extra_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilLogin"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:importantForAutofill="noExcludeDescendants"
            android:textColor="@color/white"
            android:paddingVertical="@dimen/margin_middle"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/standard_height"
        android:layout_marginTop="@dimen/margin_standard"
        android:backgroundTint="@color/black"
        android:paddingHorizontal="48dp"
        android:text="@string/btn_login_ru"
        android:textAllCaps="false"
        app:cornerRadius="8dp"
        android:textSize="@dimen/text_size_standard"
        app:layout_constraintEnd_toEndOf="@id/tilPassword"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        tools:ignore="SpUsage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_standard"
        android:gravity="center|bottom"
        android:text="@string/powered_by_texnopos"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_standard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpUsage" />
</androidx.constraintlayout.widget.ConstraintLayout>